--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,11 @@
 name = "FPGA-Accelerated_Robotics_Control_System"
 authors = ["Rainer Rodrigues"]
-[compat]
-julia = "1.11.7"
-DrWatson = "2.19.1"
+
 [deps]
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+RigidBodyDynamics = "366cf18f-59d5-5db9-a4de-86a9f6786172"
+
+[compat]
+DrWatson = "2.19.1"
+julia = "1.11.7"
