--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ authors = ["Rainer Rodrigues"]
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 RigidBodyDynamics = "366cf18f-59d5-5db9-a4de-86a9f6786172"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 DrWatson = "2.19.1"
